class TargetSegmentation:
    def __init__(self, output_path, result_mask):
        self.output_path = output_path
        self.result_mask = result_mask