@startuml

class ExperimentRunner {
    + segmenter
    + target_images_dir
    + run()
    + save_duration()
}

interface IImageSegmenter {
    + load_target_images(path)
    + segment(target_images)
    + save_segmentation(segmentation)
}

class BaseSegmenter {
    + output_dir
    + preprocessing_steps
    + segmentation_refiner
    + img_extension
    + load_target_images(path)
    + segment(target_images)
    + save_segmentation(segmentation)
}

class AtlasSegmenter {
    + ...
    + segment(target_images)
    + ...()
}

class MLSegmenter {
    + ...
    + segment(target_images)
    + ...():
}

interface IPreprocessingStep {
    + preprocess_image(image)
    + preprocess_mask(mask)
    + undo_preprocessing(image, parameters)
}

interface ISegmentationRefiner {
    + refine(target_mask, target_image)
}

IImageSegmenter <|.. BaseSegmenter
BaseSegmenter <|-d- AtlasSegmenter
BaseSegmenter <|-d- MLSegmenter
ExperimentRunner o-- "1...*" IImageSegmenter
BaseSegmenter o-l- "0...*" IPreprocessingStep
BaseSegmenter o-r- "0...1" ISegmentationRefiner



class TargetSegmentation {
    - output_path
    - result_mask
}

class TargetImage {
    - image_path:
    - image
    - preprocessed_image
    - preprocessing_parameters
    + append_preprocessing_parameters()
}

IImageSegmenter .r.> TargetSegmentation : <<create>>
IImageSegmenter .l.> TargetImage : <<segment>>

class SegmentationMask {
}

BaseSegmenter .d.> SegmentationMask : <<save>>


class Validator {
    + ground_truth_dir
    + ground_truths
    + output_dir
    + validate(predictions_dir)
    + load_masks(ground_truth_dir)
    + ...()
}

Validator .u.> SegmentationMask : <<load>>

class EvaluationMetrics {
    + dsc: float
    + ...
}

Validator .d.> EvaluationMetrics : <<save>>

class Visualizer {
    + base_validation_path
    + experiment_names
    + plotters
    + metrics
    + output_dir
    + visualize()
}

class IPlotter {
    + plot(metrics,data_frames, experiment_names, output_path)
}

Visualizer .u.> EvaluationMetrics : <<load>>
Visualizer o-r- "0...1" IPlotter

@enduml